--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+        <section>My Slides 1</section>
+        <section>My Slides 2</section>
+        <section>My Slides 3</section>
+        <section>My Slides 4</section>
 			</div>
 		</div>
 
