--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <link rel="stylesheet" href="dist/reset.css">
     <link rel="stylesheet" href="dist/reveal.css">
-    <!-- <link rel="stylesheet" href="dist/theme/dracula.css"> -->
-    <link rel="stylesheet" href="dist/theme/league.css">
+    <!-- <link rel="stylesheet" href="dist/theme/league.css"> -->
+    <link rel="stylesheet" href="dist/theme/dracula.css">
 
-    <link rel="stylesheet" href="fontawesome/css/all.css">
+    <!-- <link rel="stylesheet" href="fontawesome/css/all.css"> -->
     <style>
       .reveal i.fa {
         font-family: FontAwesome;
@@ -52,25 +52,100 @@
               <li>This presentation will cover the basics of Engineering Concepts</li>
               <li>Geared towards both early learners not familiar with Engineering Design Process (EDP).</li>
               <li>Emphasis on real world application of EDP</li>
-              </ul>
-              </aside>
-              </section>
-
-        <!-- Draw This -->
-        <section>
-          <h2>Draw This</h2>
-          <ul>
-            <li class="fragment custom blur">a small rectangle</li>
-            <li class="fragment custom blur">make it purple</li>
-            <li class="fragment custom blur">add a moon in the top right corner</li>
             </ul>
+          </aside>
         </section>
+
+        <!-- Draw This ... 1-->
         <section>
-          <h2>Does your drawing look like this?</h2>
-
-
+          <h2>Draw This...1</h2>
+          <ul>
+            <li class="fragment custom blur">a rectangle with a red sqauare in the middle</li>
+            <li class="fragment custom blur">put it in the bottom left of the page and make it purple</li>
+            <li class="fragment custom blur">add a yellow moon in the top right corner</li>
+            <!-- <li class="fragment custom blur"><a href="#/2/1" class="navigate-down"> -->
+              <!-- <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="50" height="50" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow"> -->
+            <!-- </a></li> -->
+          </ul>
         </section>
 
+        <!-- Image 1 -->
+        <section data-auto-animate style="height: 600px">
+          <h4>Does your drawing look like this?</h4>
+          <p>
+            <ul>
+              <li style="font-size: 60%;">a rectangle with a red sqauare in the middle</li>
+              <li style="font-size: 60%;">put it in the bottom left of the page and make it purple</li>
+              <li style="font-size: 60%;">add a yellow moon in the top right corner</li>
+            </ul>
+          </p>
+          <h2 data-id="title" style="margin-top: 500px; opacity: 0;">With Auto Animate</h2>
+          <div data-id="1" style="background: rgba(255, 253, 255, 0.596); position: absolute; top: 200px; left: 235px; width: 500px; height: 475px;"></div>
+          <div data-id="1" style="background: rgba(255, 0, 255, 0.596); position: absolute; top: 460px; left: 250px; width: 380px; height: 200px;"></div>
+          <div data-id="3" style="background: red; position: absolute; top: 525px; left: 405px; width: 70px; height: 70px;"></div>
+          <div data-id="4" style="background: yellow; position: absolute; top: 325px; left: 700px; width: 100px; height: 100px; margin: -100px 0 0 -100px; border-radius: 400px;"></div>
+        </section>
+
+        <!-- Draw This ... 2-->
+
+        <section>
+          <h2>Draw This...2</h2>
+          <ul>
+            <li class="fragment custom blur">a rectangle with a red sqauare in the middle</li>
+            <li class="fragment custom blur">put it in the bottom left of the page and make it purple</li>
+            <li class="fragment custom blur">add a yellow moon in the top right corner</li>
+            <!-- <li class="fragment custom blur"><a href="#/2/1" class="navigate-down"> -->
+              <!-- <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="50" height="50" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow"> -->
+            <!-- </a></li> -->
+          </ul>
+        </section>
+
+        <!-- Image 2 -->
+        <section data-auto-animate style="height: 600px">
+          <h4>Does your drawing look like this?</h4>
+          <p>
+            <ul>
+              <li style="font-size: 60%;">a rectangle with a red sqauare in the middle</li>
+              <li style="font-size: 60%;">put it in the bottom left of the page and make it purple</li>
+              <li style="font-size: 60%;">add a yellow moon in the top right corner</li>
+            </ul>
+          </p>
+          <h2 data-id="title" style="margin-top: 500px; opacity: 0;">With Auto Animate</h2>
+          <div data-id="1" style="background: rgba(255, 253, 255, 0.596); position: absolute; top: 200px; left: 235px; width: 500px; height: 475px;"></div>
+          <div data-id="1" style="background: rgba(255, 0, 255, 0.596);   position: absolute; top: 460px; left: 250px; width: 380px; height: 200px;"></div>
+          <div data-id="3" style="background: red;                        position: absolute; top: 525px; left: 405px; width: 70px; height: 70px;"></div>
+          <div data-id="4" style="background: yellow;                     position: absolute; top: 400px; left: 550px; width: 100px; height: 100px; margin: -100px 0 0 -100px; border-radius: 400px;"></div>
+        </section>
+
+
+        <!-- Draw This ... 3-->
+        <section>
+          <h2>Draw This ...3</h2>
+          <ul>
+            <li class="fragment custom blur">a gray cat with glasses</li>
+            <li class="fragment custom blur">with a laptop</li>
+            <li class="fragment custom blur">have it's right front paw pointing up to the sky</li>
+            <li class="fragment custom blur">with a twinkling lightbulb above it's head as if to say "Ah Ha!"</li>
+            <!-- <li class="fragment custom blur"><a href="#/2/1" class="navigate-down"> -->
+              <!-- <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="50" height="50" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow"> -->
+            <!-- </a></li> -->
+          </ul>
+        </section>
+        
+        <!-- Image 3 -->
+        <section data-auto-animate style="height: 600px">
+          <h4>Does your drawing look like this?</h4>
+          <p>
+            <ul>
+              <li style="font-size: 60%;">a cat with glasses</li>
+              <li style="font-size: 60%;">with a laptop</li>
+              <li style="font-size: 60%;">have it's right front paw pointing up to the sky</li>
+              <li style="font-size: 60%;">with a twinkling lightbulb above it's head as if to say "Ah Ha!"</li>
+            </ul>
+          </p>
+          <img src="examples\assets\idea.png"  height="200" width="200">
+        </section>
+          
       </div>
     </div>
 
@@ -95,6 +170,6 @@
         plugins: [RevealZoom, RevealNotes, RevealSearch, RevealMarkdown, RevealHighlight]
       });
 
-</script>
-    </body>
+    </script>
+  </body>
 </html>
