--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
             <li class="fragment custom blur">a rectangle with a red sqauare in the middle</li>
             <li class="fragment custom blur">put it in the bottom left of the page and make it purple</li>
             <li class="fragment custom blur">add a yellow moon in the top right corner</li>
-            <!-- <li class="fragment custom blur"><a href="#/2/1" class="navigate-down"> -->
-              <!-- <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="50" height="50" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow"> -->
-            <!-- </a></li> -->
           </ul>
         </section>
 
@@ -87,52 +84,23 @@
         </section>
 
         <!-- Draw This ... 2-->
-
         <section>
-          <h2>Draw This...2</h2>
-          <ul>
-            <li class="fragment custom blur">a rectangle with a red sqauare in the middle</li>
-            <li class="fragment custom blur">put it in the bottom left of the page and make it purple</li>
-            <li class="fragment custom blur">add a yellow moon in the top right corner</li>
-            <!-- <li class="fragment custom blur"><a href="#/2/1" class="navigate-down"> -->
-              <!-- <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="50" height="50" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow"> -->
-            <!-- </a></li> -->
-          </ul>
-        </section>
-
-        <!-- Image 2 -->
-        <section data-auto-animate style="height: 600px">
-          <h4>Does your drawing look like this?</h4>
-          <p>
-            <ul>
-              <li style="font-size: 60%;">a rectangle with a red sqauare in the middle</li>
-              <li style="font-size: 60%;">put it in the bottom left of the page and make it purple</li>
-              <li style="font-size: 60%;">add a yellow moon in the top right corner</li>
-            </ul>
-          </p>
-          <h2 data-id="title" style="margin-top: 500px; opacity: 0;">With Auto Animate</h2>
-          <div data-id="1" style="background: rgba(255, 253, 255, 0.596); position: absolute; top: 200px; left: 235px; width: 500px; height: 475px;"></div>
-          <div data-id="1" style="background: rgba(255, 0, 255, 0.596);   position: absolute; top: 460px; left: 250px; width: 380px; height: 200px;"></div>
-          <div data-id="3" style="background: red;                        position: absolute; top: 525px; left: 405px; width: 70px; height: 70px;"></div>
-          <div data-id="4" style="background: yellow;                     position: absolute; top: 400px; left: 550px; width: 100px; height: 100px; margin: -100px 0 0 -100px; border-radius: 400px;"></div>
-        </section>
-
-
-        <!-- Draw This ... 3-->
-        <section>
-          <h2>Draw This ...3</h2>
+          <h2>Draw This ...2</h2>
           <ul>
             <li class="fragment custom blur">a gray cat with glasses</li>
             <li class="fragment custom blur">with a laptop</li>
             <li class="fragment custom blur">have it's right front paw pointing up to the sky</li>
             <li class="fragment custom blur">with a twinkling lightbulb above it's head as if to say "Ah Ha!"</li>
-            <!-- <li class="fragment custom blur"><a href="#/2/1" class="navigate-down"> -->
-              <!-- <img class="r-frame" style="background: rgba(255,255,255,0.1);" width="50" height="50" data-src="https://static.slid.es/reveal/arrow.png" alt="Down arrow"> -->
-            <!-- </a></li> -->
           </ul>
+          <aside class="notes">
+            <ul>
+              <li>Show this one!</li>
+              <li>Even knowing exactly what to draw doesn't always make it easy</li>
+            </ul>
+          </aside>
         </section>
         
-        <!-- Image 3 -->
+        <!-- Image 2 -->
         <section data-auto-animate style="height: 600px">
           <h4>Does your drawing look like this?</h4>
           <p>
@@ -145,7 +113,75 @@
           </p>
           <img src="examples\assets\idea.png"  height="200" width="200">
         </section>
-          
+
+        <!-- Draw This ... 3-->
+        <section>
+          <h2>Draw This...3</h2>
+          <ul>
+            <li class="fragment custom blur">A big mean duck</li>
+            <li class="fragment custom blur">with the word "Pathetic" floating above it's head</li>
+            <li class="fragment custom blur">and make it look real judgmental</li>
+          </ul>
+          <aside class="notes">
+            <ul>
+              <li>Show this one!</li>
+              <li>Even knowing exactly what to draw doesn't always make it easy</li>
+            </ul>
+          </aside>
+        </section>
+
+        <!-- Image 3 -->
+        <section data-auto-animate style="height: 600px">
+          <h4>Does your drawing look like this? ...3</h4>
+          <p>
+            <ul>
+              <li style="font-size: 60%;">A big mean duck</li>
+              <li style="font-size: 60%;">with the word "Pathetic" floating above it's head</li>
+              <li style="font-size: 60%;">and make it look real judgmental</li>
+            </ul>
+          </p>
+          <img src="examples/assets/pathetic.jpeg" height="550" width="400">
+        </section>
+
+        <!-- Group work -->
+        <section>
+          <h3>Customer + Artist</h3>
+          <ul>
+            <li>The customer describes the image to the artist while the artist has to do their best to draw what is described (no peeking).</li>
+          </ul>
+
+          <aside class="notes">
+            <ul>
+              <li>Get in pairs ; 1 customer + 1 artist</li>
+              <li>Take turns describing and drawing</li>
+            </ul>
+          </aside>
+        </section>
+
+        <section>
+          <h3>Discussion</h3>          
+          <ul>
+            <li class="fragment fade-in-then-semi-out">What did you think?</li>
+            <li class="fragment fade-in-then-semi-out">How difficult was it?</li>
+            <li class="fragment fade-in-then-semi-out">What made it easier or harder?</li>
+            <li class="fragment fade-in-then-semi-out">What do you think would make it easier?</li>
+          </ul>
+        </section>
+
+        <section>
+          <h3>Discussion</h3>    
+          <ul>
+            <li class="fragment fade-in-then-semi-out">I want lunch...</li>
+            <li class="fragment fade-in-then-semi-out">Halle</li>
+            <li class="fragment fade-in-then-semi-out">What made it easier or harder?</li>
+            <li class="fragment fade-in-then-semi-out">What do you think would make it easier?</li>
+          </ul>
+          <aside class="notes">
+            <ul>
+              <li>This issue is applicable to soooo many different things... for instance</li>
+            </ul>
+          </aside>
+        </section>
       </div>
     </div>
 
