add images and update slides

--- a/examples/backgrounds.html
+++ b/examples/backgrounds.html
@@ -64,28 +64,28 @@
 					</section>
 				</section>
 
-				<section data-background-transition="slide" data-background="assets/image1.png">
-					<h2>Background image</h2>
+				<section data-background-transition="slide" data-background="assets\cat_in_a_bowl.JPG">
+					<h2>Background image 1</h2>
 				</section>
 
 				<section>
-					<section data-background-transition="slide" data-background="assets/image1.png">
-						<h2>Background image</h2>
+					<section data-background-transition="slide" data-background="assets\IMG_02.JPG">
+						<h2>Background image 2</h2>
 					</section>
-					<section data-background-transition="slide" data-background="assets/image1.png">
-						<h2>Background image</h2>
+					<section data-background-transition="slide" data-background="assets\IMG_06(Medium).JPG">
+						<h2>Background image 3</h2>
 					</section>
 				</section>
 
-				<section data-background="assets/image2.png" data-background-size="100px" data-background-repeat="repeat" data-background-color="#111">
-					<h2>Background image</h2>
+				<section data-background="assets\IMG_06.JPG" data-background-size="750px" data-background-repeat="repeat" data-background-color="#000">
+					<h2>Background image 4</h2>
 					<pre>data-background-size="100px" data-background-repeat="repeat" data-background-color="#111"</pre>
 				</section>
 
-				<section data-background="#888888">
+				<section data-background="assets\higgins.jpeg">
 					<h2>Same background twice (1/2)</h2>
 				</section>
-				<section data-background="#888888">
+				<section data-background="assets\higgins.jpeg">
 					<h2>Same background twice (2/2)</h2>
 				</section>
 
