fix spelling errors and add transition slide

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section data-transition="slide"> <!-- #2 -->
           <div><h2>Draw This</h2></div>
           <ul>
-            <li class="fragment custom blur" style="font-size: 80%;">a rectangle with a red sqauare in the middle</li>
+            <li class="fragment custom blur" style="font-size: 80%;">a rectangle with a red square in the middle</li>
             <li class="fragment custom blur" style="font-size: 80%;">put it in the bottom left of the page and make it purple</li>
             <li class="fragment custom blur" style="font-size: 80%;">add a yellow moon in the top right corner</li>
           </ul>
@@ -69,13 +69,13 @@
         <section data-transition="slide"> <!-- #3 -->
           <div><h4>Does your drawing look like this?</h4></div>
           <ul>
-            <li style="font-size: 60%;">a rectangle with a red sqauare in the middle</li>
+            <li style="font-size: 60%;">a rectangle with a red square in the middle</li>
             <li style="font-size: 60%;">put it in the bottom left of the page and make it purple</li>
             <li style="font-size: 60%;">add a yellow moon in the top right corner</li>
           </ul>
           <h2 data-id="title" style="margin-top: 500px; opacity: 0;">With Auto Animate</h2>
           <div data-id="1" style="background: rgba(255, 253, 255, 0.596); position: absolute; top: 200px; left: 235px; width: 500px; height: 475px;"></div>
-          <div data-id="1" style="background: rgba(255, 0, 255, 0.596); position: absolute; top: 460px; left: 250px; width: 380px; height: 200px;"></div>
+          <div data-id="1" style="background: purple; position: absolute; top: 460px; left: 250px; width: 380px; height: 200px;"></div>
           <div data-id="3" style="background: red; position: absolute; top: 525px; left: 405px; width: 70px; height: 70px;"></div>
           <div data-id="4" style="background: yellow; position: absolute; top: 325px; left: 700px; width: 100px; height: 100px; margin: -100px 0 0 -100px; border-radius: 400px;"></div>
         </section>
@@ -129,7 +129,7 @@
 
         <!-- Image 3 -->
         <section data-transition="slide"> <!-- #7 -->
-          <h4>Does your drawing look like this? ...3</h4>
+          <h4>Does your drawing look like this?</h4>
           <p>
             <ul>
               <li style="font-size: 60%;">A big mean duck</li>
@@ -297,6 +297,16 @@
             <p>
               <img class="fragment fade-in-then-out" src="examples/assets/Gardon-River-Bridge-By-Didier-Boy-de-la-Tour-.jpg" height="500" >
             </p>
+            <aside class="notes">
+              <ul>
+                <li>Japanese architect, Shigeru Ban</li>
+                <li>Gardon River in France.</li>
+                <li>281 cardboard tubes</li>
+                <li>can carry 20 people at a time</li>
+                <li>wooden boxes filled with sand for the foundation</li>
+                <li>Only made possible through the practice of Engineering.</li>
+              </ul>
+            </aside>
           </section>
           
           <section data-background="examples/assets/Gardon-River-Bridge-By-Didier-Boy-de-la-Tour-.jpg" > <!-- #14.7 -->
@@ -316,31 +326,44 @@
           <section data-background-iframe="https://www.goodnewsnetwork.org/ultra-strong-bridges-made-of-cardboard-inspires-shelter-design/" > <!-- #14.8 -->
             <aside class="notes">
               <ul>
-                <li>Japanese architect, Shigeru Ban</li>
-                <li>Gardon River in France.</li>
-                <li>281 cardboard tubes</li>
-                <li>can carry 20 people at a time</li>
-                <li>wooden boxes filled with sand for the foundation</li>
-                <li>Only made possible through the practice of Engineering.</li>
+                <li>How did he do it?</li>
+                <li>How long did it take?</li>
+                <li>what kind of training?</li>
+                <li>segue to engineering</li>
               </ul>
             </aside>
           </section>
 
         </section>
 
-        <!-- #15 -->
-        <section data-transition="slide">
-          <h3>Engineering</h3>
-          <h8>The use of <div data-id="nat_sci" style="display: inline-block; color: var(--r-bold-color);">natural sciences</div>, <div data-id="math" style="display: inline-block;color: var(--r-bold-color);">mathematics</div>, and the <div data-id="edp" style="display: inline-block;color: var(--r-bold-color);">Engineering Design Process</div> to solve problems and make things better.</h8>
-          <p><div data-id="nom" style="display: inline-block; color: #282A36 ">Natural Sciences</div></p>
-          <p style="font-size: smaller; color: #282A36 ">The science of the physical world: chemistry, biology, physics.</p>
-          <aside class="notes">
+        <section>
+          <!-- #15 -->
+          <section data-transition="slide">
+            <h3>Engineering</h3>
+            <h8>The use of natural sciences, mathematics, and the Engineering Design Process to <div data-id="nat_sci" style="display: inline-block; color: var(--r-bold-color);">solve problems</div> and <div data-id="nat_sci" style="display: inline-block; color: var(--r-bold-color);">make things better</div>.</h8>
+            <p><div data-id="nom" style="display: inline-block; color: #282A36 ">Natural Sciences</div></p>
+            <p style="font-size: smaller; color: #282A36 ">The science of the physical world: chemistry, biology, physics.</p>
+            <aside class="notes">
+              <ul>
+                <li>What is engineering</li>
+                <li>emphasize that the goal is to solve problems and make things better</li>
+                <li>But how? We do this through the use of </li>
+              </ul>
+            </aside>
+          </section>
+          <section>
+            <h3>Engineering</h3>
+            <h8>The use of <div data-id="nat_sci" style="display: inline-block; color: var(--r-bold-color);">natural sciences</div>, <div data-id="math" style="display: inline-block;color: var(--r-bold-color);">mathematics</div>, and the <div data-id="edp" style="display: inline-block;color: var(--r-bold-color);">Engineering Design Process</div> to solve problems and make things better.</h8>
+            <p><div data-id="nom" style="display: inline-block; color: #282A36 ">Natural Sciences</div></p>
+            <p style="font-size: smaller; color: #282A36 ">The science of the physical world: chemistry, biology, physics.</p>
+            <aside class="notes">
             <ul>
-              <li>What is engineering</li>
-              <li>emphasize that the goal is to solve problems and make things better</li>
+              <li> We can solve problems and make things better through the use of ... </li>
             </ul>
           </aside>
+          </section>
         </section>
+
 
         <!-- #16 -->
         <section data-transition="slide">
